fix spacing

--- a/web/styl/lol_items.styl
+++ b/web/styl/lol_items.styl
@@ -118,7 +118,7 @@ itemPriority()
 .items
   color $text_color
   position relative
-  
+
   div
     padding-bottom 5px
   img
@@ -141,7 +141,7 @@ itemPriority()
   .item-name
     left $item_left_pos
     position absolute
-    top -6px
+    top -4px
     width $item_width
 
 $item_right_pos = 310px
